--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm19-card-05-blendingspace.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=875751dfb8284d76b878668a10d77269");
+  background-image: url("https://wallpaperaccess.com/full/4199031.jpg");
   font-family: 'Rock Salt', cursive;
   color: snow;
   background-size: cover;
@@ -8,29 +8,81 @@ body {
 header {
   display: flex;
   justify-content: center;
-  font-size: 1.5em
+  font-size: 2.25em;
+  text-shadow: 0 0 5px black;
+  margin-top: -50px;
+  margin-bottom: -80px;
+}
+
+#name {
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
 }
 
 nav {
   display: flex;
   justify-content: center;
-  justify-content: space-around;
+  float: center;
+  margin: 25px 0px 0px 0px;
 }
 
 button {
-  font-family: 'Rock Salt', cursive;
+  font-family: 'Roboto', sans-serif;
+  border: outset .25em snow;
+  border-radius: 4px;
+  color: snow;
+  background-color: rgb(51, 51, 51);
+  font-size: 24px;
+}
+
+#gamebox {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 #game {
-  display: flex;
-  justify-content: center;
   border: groove 1em snow;
   border-radius: .25em;
-  /* width: 500px; */
+  height: 540px;
+  margin: 20px
+}
+
+.game-image {
   height: 540px;
 }
 
-.enter-name {
+.decor {
+  margin: 100px;
+  border: groove 1em snow;
+  border-radius: .25em;
+  height: 251px;
+  width: 250px;
+  transform: rotate(20deg);
+}
+
+.left-decor {
+  width: 250px;
+}
+
+.right-decor {
+  width: 250px;
+}
+
+form {
   display: flex;
   justify-content: center;
+}
+
+input {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px
+}
+
+hr {
+  border: solid;
+  margin-bottom: 30px;
 }
